// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has cancel button 1`] = `
<div
  className="src-components-form-buttons__container"
>
  <Button
    aria-label="Cancel the form"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </Button>
  <Button
    aria-label="Submit the form"
    submitting={false}
    type="submit"
  >
    Submitting
  </Button>
</div>
`;

exports[`should render correctly when has previous button 1`] = `
<div
  className="src-components-form-buttons__container"
>
  <Button
    aria-label="Go back to previous form"
    className="src-components-form-buttons__back-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Previous
  </Button>
  <Button
    aria-label="Submit the form"
    submitting={false}
    type="submit"
  >
    Submitting
  </Button>
</div>
`;

exports[`should render correctly when not submitting 1`] = `
<div
  className="src-components-form-buttons__container"
>
  <Button
    aria-label="Submit the form"
    submitting={false}
    type="submit"
  >
    Submitting
  </Button>
</div>
`;

exports[`should render correctly when submitting 1`] = `
<div
  className="src-components-form-buttons__container"
>
  <Button
    aria-label="Submit the form"
    submitting={true}
    type="submit"
  >
    Submitting
  </Button>
</div>
`;
